--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
+    "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten",
+    "deploy": "vue-cli-service electron:build -p always -w",
+    "build:win": "vue-cli-service electron:build --windows",
+    "build:mac": "vue-cli-service electron:build --mac"
   },
+  "main": "background.js",
   "dependencies": {
     "@sweetalert2/theme-borderless": "^5.0.11",
     "axios": "^0.27.2",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "electron-updater": "^5.2.1",
     "jquery": "^3.6.0",
+    "macaddress": "^0.5.3",
     "moment": "^2.29.4",
     "socket.io-client": "^4.1.2",
     "stop-media-stream": "^1.0.0",
@@ -26,11 +37,19 @@
     "vuex-persist": "^3.1.3",
     "xlsx": "^0.18.5"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RHAM91/memb_zJg9Qzk9vmqyxtyjmptGmdt5q8htdj"
+  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "electron": "^13.0.0",
+    "electron-devtools-installer": "^3.1.0",
+    "electron-icon-builder": "^2.0.1",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
